--- a/apps/backend/.env.template
+++ b/apps/backend/.env.template
@@ -5,7 +5,7 @@ AUTH_CORS=http://localhost:9000,http://localhost:5173,http://localhost:3000
 REDIS_URL=redis://localhost:6379
 JWT_SECRET=supersecret
 COOKIE_SECRET=supersecret
-DATABASE_URL=postgres://postgres:Chandra@123@localhost:5432/$DB_NAME
+DATABASE_URL=postgres://postgres:Chandra123@localhost:5432/$DB_NAME
 DB_NAME=mecurerdb
 
 STRIPE_SECRET_API_KEY=supersecret
